default login redirect

--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -44,7 +44,7 @@
         <span  class="navbar-brand">Menu</span>
         <!-- Collapse button -->
         <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
-                aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle na²²vigation">
           <div class="animated-icon1"><span></span><span></span><span></span></div>
         </button>
 
