--- a/djangoproject/gestion_stock/templates/empty.html
+++ b/djangoproject/gestion_stock/templates/empty.html
@@ -23,9 +23,41 @@
 </head>
 <body>
 
-{% block content %}
-{% endblock %}
-
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Redirection...</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body">
+                ...aze
+            </div>
+            <div class="modal-footer">
+<!--                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+-->            </div>
+        </div>
+    </div>
+</div>
 
 </body>
+<script>
+    $('#exampleModal').modal('show');
+
+    $('.modal-body').text('You will be redirected to login page in ' + 6 + ' s...');
+    var a = 5;
+    for (a = 5; a != 0; a--)
+    window.setTimeout(function(){
+        $('.modal-body').text('You will be redirected to login page in ' + a + ' s...');
+    }, 1000);
+
+    function redirect(){
+        '{% block sidebar %}'
+            //window.location.href = "{% url 'login' %}";
+        '{% endblock %}'
+    }
+//    setTimeout(redirect, 6000); //2000 is equivalent to 2 seconds
+</script>
 </html>
