--- a/djangoproject/gestion_stock/templates/articleadd.html
+++ b/djangoproject/gestion_stock/templates/articleadd.html
@@ -1,4 +1,4 @@
-{% extends "base_generic.html" %}
+{% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
 {% block content %}
 
@@ -19,17 +19,17 @@
 
 <div class="container">
     <div class="form-group row text-center">
-        <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
-        </div>
-        <div class="col">
-            <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-        </div>
-        <div class="col">
-            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+        <div class="mx-auto">
+            <div class="row">
+            <div class="col">
+                <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
+            </div>
+                <div class="col-1">
+                </div>
+            <div class="col">
+                <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
+            </div>
+            </div>
         </div>
     </div>
 </div>
@@ -123,36 +123,36 @@
                             oldname = name;
                             i = 1;
                             "{% endfor %}"
+                            $("#fournitype").append(new Option("", ""));
                         });
                     </script>
                 </select>
+ <!--                   <button class="btn btn-danger btn-sm" type="reset" id="resetbut">Reset</button>-->
                 </div>
             </div>
             <div class="container">
 
                 <div class="row">
                     <div class="col-sm">
-                        qte colis std : <br><input type="text" id="délaipcli" class="form-control" name="délai peremption/jours">
+                        qte colis std : <br><input type="text" id="qtecstd" class="form-control" name="délai peremption/jours">
                     </div>
                     <div class="col-sm">
-                        poids colis std : <br><input type="text" id="délaipcli" class="form-control" name="délai peremption/jours">
+                        poids colis std : <br><input type="text" id="pcstd" class="form-control" name="délai peremption/jours">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col">
-                        poids colis std : <br><input type="text" id="délaipcli" class="form-control" name="délai peremption/jours">
+                        source : <br><input type="text" id="source" class="form-control" name="délai peremption/jours">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        poids colis std : <br><input type="text" id="délaipcli" class="form-control" name="délai peremption/jours">
+                        id. source: <br><input type="text" id="idsource" class="form-control" name="délai peremption/jours">
                     </div>
                 </div>
                 <br>
-
             </div>
-
         </div>
     </div>
 
@@ -179,9 +179,8 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for items in art %}
                     <tr>
-                        <td> <button id='{{ items.idArticle }}' class="dyna"> -> </button></td>
+<!--                        <td> <button id='{{ items.idArticle }}' class="dyna"> -> </button></td>
                         <td> {{ items.stock }} </td>
                         <td> {{ items.fk_TypeArticle.nom }} </td>
                         <td> {{ items.fk_Fournisseur.nom }} </td>
@@ -194,8 +193,8 @@
                         <td> {{ items.quantiteColisStandard }} </td>
                         <td> {{ items.quantiteUniteManutentionSortie }} </td>
                         <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>
+                        -->
                     </tr>
-                    {% endfor %}
                     </tbody>
                 </table>
             </div>
@@ -203,7 +202,7 @@
         <div class="col-4">
             <div class="row">
                 <div class="border shadow-lg bg-white rounded col-md-auto">
-                    <table id="dtBasicExample" class="table table-striped table-responsive table-bordered table-sm" cellspacing="0" width="100%">
+                    <table id="dtBasicExample2" class="table table-striped table-responsive table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
                             <th scope="col" class="th-sm"> modify </th>
@@ -214,15 +213,14 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for items in art %}
                         <tr>
+                            <!--
                             <td> <button id='{{ items.idArticle }}' class="dyna"> -> </button></td>
                             <td> {{ items.stock }} </td>
                             <td> {{ items.fk_TypeArticle.nom }} </td>
                             <td> {{ items.fk_Fournisseur.nom }} </td>
-                            <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>
+                            <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>-->
                         </tr>
-                        {% endfor %}
                         </tbody>
                     </table>
                 </div>
@@ -236,6 +234,12 @@
         $("#back-row").click(function() {
             location.href = "{% url 'article' %}";
         });
+
+        $("#resetbut").click(function() {
+            /*$('#fournitype').val("");
+            $( "#fournitype option:selected" ).text("aze");*/
+        });
+
         var upperid = "0";
         "{% for items in art %}"
         if (parseInt(upperid, 10) < parseInt('{{ items.idArticle }}', 10)) {
@@ -252,9 +256,20 @@
                 type:"POST",    //type de requête utilisé par ajax
                 url:"/create_art/", //lien de la view qui gère la requête post
                 data: {
-                    'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-                    'id': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
-                    //'fourtype': $('#fournitype').val(),
+                    'name': $('#nom').val(),
+                    'id': $('#umid').val(),
+                    'codefour': $('#codefour').val(),
+                    'desifour': $('#desigfour').val(),
+                    'codecli': $('#codecli').val(),
+                    'desicli': $('#désicli').val(),
+                    'delaicli': $('#délaipcli').val(),
+                    'durestock': $('#dureestock').val(),
+                    'artitype': $('#artitype').val(),
+                    'fournitype': $('#fournitype').val(),
+                    'qtecstd': $('#qtecstd').val(),
+                    'pcstd': $('#pcstd').val(),
+                    'source': $('#source').val(),
+                    'idsource': $('#idsource').val(),
                     csrfmiddlewaretoken: '{{ csrf_token }}',
                 },
                 success: function(msg, data, settings){
@@ -266,11 +281,125 @@
             });
         });
 
+        $.widget("custom.combobox", {
+            _create: function () {
+                this.wrapper = $("<span>")
+                    .addClass("custom-combobox")
+                    .insertAfter(this.element);
+                this.element.hide();
+                this._createAutocomplete();
+                this._createShowAllButton();
+            },
+            _createAutocomplete: function () {
+                var selected = this.element.children(":selected"),
+                    value = selected.val() ? selected.text() : "";
+                this.input = $("<input>")
+                    .appendTo(this.wrapper)
+                    .val(value)
+                    .attr("title", "")
+                    .addClass("custom-combobox-input ui-widget ui-widget-content ui-state-default ui-corner-left")
+                    .autocomplete({
+                        delay: 0,
+                        minLength: 0,
+                        source: $.proxy(this, "_source")
+                    })
+                    .tooltip({
+                        classes: {
+                            "ui-tooltip": "ui-state-highlight"
+                        }
+                    });
+                this._on(this.input, {
+                    autocompleteselect: function (event, ui) {
+                        ui.item.option.selected = true;
+                        this._trigger("select", event, {
+                            item: ui.item.option
+                        });
+                    },
+                    autocompletechange: "_removeIfInvalid"
+                });
+            },
+            _createShowAllButton: function () {
+                var input = this.input,
+                    wasOpen = false;
+                $("<a>")
+                    .attr("tabIndex", -1)
+                    .attr("title", "Show All Items")
+                    .tooltip()
+                    .appendTo(this.wrapper)
+                    .button({
+                        icons: {
+                            primary: "ui-icon-triangle-1-s"
+                        },
+                        text: false
+                    })
+                    .removeClass("ui-corner-all")
+                    .addClass("custom-combobox-toggle ui-corner-right")
+                    .on("mousedown", function () {
+                        wasOpen = input.autocomplete("widget").is(":visible");
+                    })
+                    .on("click", function () {
+                        input.trigger("focus");
+                        // Close if already visible
+                        if (wasOpen) {
+                            return;
+                        }
+                        // Pass empty string as value to search for, displaying all results
+                        input.autocomplete("search", "");
+                    });
+            },
+            _source: function (request, response) {
+                var matcher = new RegExp($.ui.autocomplete.escapeRegex(request.term), "i");
+                response(this.element.children("option").map(function () {
+                    var text = $(this).text();
+                    if (this.value && (!request.term || matcher.test(text)))
+                        return {
+                            label: text,
+                            value: text,
+                            option: this
+                        };
+                }));
+            },
+            _removeIfInvalid: function (event, ui) {
+                // Selected an item, nothing to do
+                if (ui.item) {
+                    return;
+                }
+                // Search for a match (case-insensitive)
+                var value = this.input.val(),
+                    valueLowerCase = value.toLowerCase(),
+                    valid = false;
+                this.element.children("option").each(function () {
+                    if ($(this).text().toLowerCase() === valueLowerCase) {
+                        this.selected = valid = true;
+                        return false;
+                    }
+                });
+                // Found a match, nothing to do
+                if (valid) {
+                    return;
+                }
+                // Remove invalid value
+                this.input
+                    .val("")
+                    .attr("title", value + " didn't match any item")
+                    .tooltip("open");
+                this.element.val("");
+                this._delay(function () {
+                    this.input.tooltip("close").attr("title", "");
+                }, 2500);
+                this.input.autocomplete("instance").term = "";
+            },
+            _destroy: function () {
+                this.wrapper.remove();
+                this.element.show();
+            },
+        });
+
         $("#fournitype").combobox();
         $("#artitype").combobox();
         $("#toggle").on("click", function() {
             $("#fournitype").toggle();
-            $("#artitype").combobox();
+            $("#artitype").toggle();
         });
     });
 </script>
