--- a/djangoproject/gestion_stock/templates/base_generic.html
+++ b/djangoproject/gestion_stock/templates/base_generic.html
@@ -158,6 +158,24 @@
                   </div>
                 </li>
 
+                <li class="nav-item" style="height: 129.25px;">
+                  <hr>
+                  <div class="row">
+                    <div class="mx-auto">
+                      <a class="nav-link text-center" href="{% url 'bonLivraisonEntree' %}">
+                        <div class="col">
+                          <div class="mx-auto">
+                            <img src="{{ STATIC_URL }} /static/img/normal_ian-symbol-vehicle-suv.png" class="img-fluid rounded text-left" alt="bonlivraison4x4" height="75" width="75">
+                          </div>
+                        </div>
+                        <div class="col">
+                          <p>Bon de livraison Entree </p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </li>
+
               </ul>
             </div>
 
@@ -227,6 +245,24 @@
                     <div class="mx-auto">
                       <a class="nav-link text-left my_img"  href="{% url 'fournisseur' %}"><img src="{{ STATIC_URL }} /static/img/supplier-management.jpg" class="img-fluid rounded" alt="Fournisseurs">
                         Fournisseurs</a>
+                    </div>
+                  </div>
+                </li>
+
+                <li class="nav-item">
+                  <hr>
+                  <div class="row">
+                    <div class="mx-auto">
+                      <a class="nav-link text-center" href="{% url 'colis' %}">
+                        <div class="col">
+                          <div class="mx-auto">
+                            <img src="{{ STATIC_URL }} /static/img/promotion-produit.png" class="img-fluid rounded text-left" alt="promotion-produit" height="75" width="75">
+                          </div>
+                        </div>
+                        <div class="col">
+                          <p>Colis</p>
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </li>
