--- a/djangoproject/gestion_stock/templates/articlemodify.html
+++ b/djangoproject/gestion_stock/templates/articlemodify.html
@@ -207,32 +207,30 @@
                 <button type="button" class="btn btn-outline-success mb-2">+</button>
             </div>
         </div>
-        <div class="col-4">
-            <div class="row">
-                <div class="border shadow-lg bg-white rounded col-md-auto">
-                    <table id="dtBasicExample" class="table table-striped table-responsive table-bordered table-sm" cellspacing="0" width="100%">
-                        <thead>
-                        <tr>
-                            <th scope="col" class="th-sm"> modify </th>
-                            <th scope="col" class="th-sm"> stock </th>
-                            <th scope="col" class="th-sm"> type article </th>
-                            <th scope="col" class="th-sm"> fournisseur </th>
-                            <th scope="col" class="th-sm"> delete </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for items in art %}
-                        <tr>
-                            <td> <button id='{{ items.idArticle }}' class="dyna"> -> </button></td>
-                            <td> {{ items.stock }} </td>
-                            <td> {{ items.fk_TypeArticle.nom }} </td>
-                            <td> {{ items.fk_Fournisseur.nom }} </td>
-                            <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>
-                        </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+        <div class="col-sm-4">
+            <div class="border shadow-lg bg-white rounded container">
+                <h5 class="text-center"> <u>destinataires</u> </h5>
+                <table id="dtBasicExample2" class="table table-striped table-responsive table-bordered table-sm" cellspacing="0" width="100%">
+                    <thead>
+                    <tr>
+                        <th scope="col" class="th-sm"> <i class="fas fa-cog"></i> </th>
+                        <th scope="col" class="th-sm"> stock </th>
+                        <th scope="col" class="th-sm"> type article </th>
+                        <th scope="col" class="th-sm"> fournisseur </th>
+                        <th scope="col" class="th-sm"> X </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <!--
+                        <td> <button id='{{ items.idArticle }}' class="dyna"> -> </button></td>
+                        <td> {{ items.stock }} </td>
+                        <td> {{ items.fk_TypeArticle.nom }} </td>
+                        <td> {{ items.fk_Fournisseur.nom }} </td>
+                        <td> <button id='{{ items.idArticle }}' class="dynad"> X </button> </td>-->
+                    </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -240,6 +238,9 @@
 <br>
 <script>
     $(document).ready(function() {
+        $("#create-row").click(function() {
+            location.href = "{% url 'articleadd' %}";
+        });
 
         $(".fa-chevron-circle-right").click(function() {
             $.ajax({
@@ -317,11 +318,22 @@
             var typef = $('#fournitype').val();
             $.ajax({
                 type:"POST",    //type de requête utilisé par ajax
-                url:"/create_art/", //lien de la view qui gère la requête post
+                url:"/article/modify/modif/", //lien de la view qui gère la requête post
                 data: {
-                    'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-                    'id': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
-                    //'fourtype': $('#fournitype').val(),
+                    'name': $('#nom').val(),
+                    'id': $('#umid').val(),
+                    'codefour': $('#codefour').val(),
+                    'desifour': $('#desigfour').val(),
+                    'codecli': $('#codecli').val(),
+                    'desicli': $('#désicli').val(),
+                    'delaicli': $('#délaipcli').val(),
+                    'durestock': $('#dureestock').val(),
+                    'artitype': $('#artitype').val(),
+                    'fournitype': $('#fournitype').val(),
+                    'qtecstd': $('#qtecstd').val(),
+                    'pcstd': $('#pcstr').val(),
+                    'source': $('#src').val(),
+                    'idsource': $('#idsrc').val(),
                     csrfmiddlewaretoken: '{{ csrf_token }}',
                 },
                 success: function(msg, data, settings){
