--- a/djangoproject/gestion_stock/templates/clientmodify.html
+++ b/djangoproject/gestion_stock/templates/clientmodify.html
@@ -13,19 +13,20 @@
 <div class="container"><h1 class="text-center"> Modification de Client</h1></div>
 <br>
 <div class="container">
-    <div class="form-group row">
-        <div class="col-md-2">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
+    <div class="form-group row text-center">
+        <div class="col">
+            <i class="fa fa-chevron-circle-left" style="font-size:45px;cursor: pointer;"></i>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
-        <div class="col-md-2">
+        <div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
         </div>
-        <div class="col-md-3">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+        <div class="col">
+            <i class="fa fa-chevron-circle-right" style="font-size:45px;cursor: pointer;"></i>
         </div>
+
     </div>
 </div>
 
@@ -324,6 +325,45 @@
 
 <script>
     $(document).ready(function() {
+
+        $(".fa-chevron-circle-right").click(function() {
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/right_client/", //lien de la view qui gère la requête post
+                data: {
+                    'id': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'clientmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
+        $(".fa-chevron-circle-left").click(function() {
+            $.ajax({
+                type:"POST",    //type de requête utilisé par ajax
+                url:"/left_client/", //lien de la view qui gère la requête post
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'clientmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
         var i = 0;
         $('.contactrole').each(function() {
             i++;
