--- a/djangoproject/gestion_stock/templates/destinatairemodify.html
+++ b/djangoproject/gestion_stock/templates/destinatairemodify.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
+            <i class="fa fa-chevron-circle-left" style="font-size:45px;cursor: pointer;"></i>
         </div>
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
@@ -29,7 +29,7 @@
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
         </div>
         <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+            <i class="fa fa-chevron-circle-right" style="font-size:45px;cursor: pointer;"></i>
         </div>
     </div>
 </div>
@@ -225,9 +225,49 @@
 
     <script type="text/javascript">
         $(document).ready(function() {
+
             $("#back-row").click( function() {
                 location.href = "{% url 'destinataire' %}";
             });
+
+            $(".fa-chevron-circle-right").click(function() {
+                $.ajax({
+                    type:"POST",    //type de requête utilisé par ajax
+                    url:"/right_destinataire/", //lien de la view qui gère la requête post
+                    data: {
+                        'id': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                    success: function(msg, data, settings){
+                        console.log("gg " + msg);
+                        if (msg != "fail")
+                            window.location.href = "{% url 'destinatairemodify' %}?id=" +  msg;
+                    },
+                    failure: function() {
+                        console.log("fail");
+                    }
+                });
+            });
+
+            $(".fa-chevron-circle-left").click(function() {
+                $.ajax({
+                    type:"POST",    //type de requête utilisé par ajax
+                    url:"/left_destinataire/", //lien de la view qui gère la requête post
+                    data: {
+                        'id': $('#umid').val(),
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                    },
+                    success: function(msg, data, settings){
+                        console.log("gg " + msg);
+                        if (msg != "fail")
+                            window.location.href = "{% url 'destinatairemodify' %}?id=" +  msg;
+                    },
+                    failure: function() {
+                        console.log("fail");
+                    }
+                });
+            });
+
             $("#umid").val('{{ id }}');
             $("#nom").val('{{ name }}');
             var idDestinataire = $("#umid").val();
