--- a/djangoproject/gestion_stock/templates/fournisseurmodify.html
+++ b/djangoproject/gestion_stock/templates/fournisseurmodify.html
@@ -14,13 +14,14 @@
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-<div class="container"><h1 class="text-center"> Modification du Transporteur </h1></div>
+<div class="container"><h1 class="text-center"> Modification du fournisseur </h1></div>
 <br>
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
+            <i class="fa fa-chevron-circle-left" style="font-size:45px;cursor: pointer;"></i>
         </div>
+
         <div class="col">
             <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
         </div>
@@ -28,8 +29,9 @@
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
         </div>
         <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+            <i class="fa fa-chevron-circle-right" style="font-size:45px;cursor: pointer;"></i>
         </div>
+
     </div>
 </div>
 
@@ -37,56 +39,245 @@
     <div class="row" style="width: auto; height: 100%;">
         <div class="border shadow-lg p-3 mb-5 bg-white rounded" style="width: 100%; height: auto;">
             <div class="row">
-                <div class="col-md-10" >
+                <div class="col" >
                     <h3 class="text-center"> identification </h3>
                 </div>
             </div>
             <br>
-            <br>
-            <form action="/create_trans/" method="POST" id="post-form">
-                <br>
-                <div class="">
-                    identifiant:<br><input type="text" id="umid" name="id_transporteur" disabled>
-                </div>
-                <div>
-                    nom: <br><input type="text" id="nom" name="nom_transporteur">
-                </div>
-                <br>
-                <input type="button" class="btn btn-primary" id="modify" value="Save">
-            </form>
+            <div class="text-center">
+
+                <form action="/create_four/" method="POST" id="post-form">
+                    <div class="">
+                        identifiant:<br><input type="text" id="umid" disabled>
+                    </div>
+                    <div>
+                        nom: <br><input type="text" id="nom">
+                    </div>
+                    <br>
+                    <div class="selsel">
+                        Type de fournisseur <br><select class="form-control" id="fournitype">
+                        <script type="text/javascript">
+                            $(document).ready(function() {
+                                var i = 0;
+                                "{% for items in typef %}"
+                                //to change
+                                var name = "{{ items.nom }}";
+                                var oldname;
+                                if (i == 0)
+                                    $("#fournitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                else if (name != oldname)
+                                    $("#fournitype").append(new Option("{{ items.nom }}", "{{ items.nom }}"));
+                                oldname = name;
+                                i = 1;
+                                "{% endfor %}"
+                            });
+                        </script>
+                    </select>
+                    </div>
+                    <br>
+                    <input type="button" class="btn btn-primary" id="addfour" value="Save">
+                </form>
+            </div>
+
         </div>
     </div>
 </div>
 
 <script>
     $(document).ready(function() {
-        console.log("{{ name }}");
-        console.log("{{ id }}");
         //alert(window.location.search.substring(1));
         $("#back-row").click( function() {
-            location.href = "{% url 'transporteur' %}";
+            location.href = "{% url 'fournisseur' %}";
         });
-        $("#umid").val('{{ id }}');
-        $("#nom").val('{{ name }}');
 
-        $('#modify').click(function() {
+        "{% for items in four %}"
+        if ('{{ items.idFournisseur }}' === '{{ id }}') {
+            $("#umid").val('{{ items.idFournisseur }}');
+            $("#fournitype").val('{{ items.fk_TypeFournisseur.nom }}');
+            $("#nom").val('{{ items.nom }}');
+        }
 
+        "{% endfor %}"
+        $('#addfour').click(function() {
             $.ajax({
                 type:"POST",    //type de requête utilisé par ajax
                 url:"/modify_four/", //lien de la view qui gère la requête post
                 data: {
-                    'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
-                    'id': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
-                    'true': $('#umid').val(), // id du transporteur acquis grace a une incrementation en js
+                    'name': $('#nom').val(),
+                    'id': $('#umid').val(),
+                    'fournitype': $('#fournitype').val(),
+                    'true': $('#umid').val(),
                     csrfmiddlewaretoken: '{{ csrf_token }}'
                 },
-                success: function(msg, data, settings){
+                success: function(msg, data, settings) {
                     alert("gg so " + msg);
                 },
                 failure: function() {
                     alert("fail");
                 }
             });
+        });
+
+        $("#create-row").click(function() {
+            location.href = "{% url 'fournisseuradd' %}";
+        });
+
+
+        $(".fa-chevron-circle-right").click(function() {
+            $.ajax({
+                type:"POST",
+                url:"/right_fournisseur/",
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'fournisseurmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
+        $(".fa-chevron-circle-left").click(function() {
+            $.ajax({
+                type:"POST",
+                url:"/left_fournisseur/",
+                data: {
+                    'id': $('#umid').val(),
+                    csrfmiddlewaretoken: '{{ csrf_token }}',
+                },
+                success: function(msg, data, settings){
+                    console.log("gg " + msg);
+                    if (msg != "fail")
+                        window.location.href = "{% url 'fournisseurmodify' %}?id=" +  msg;
+                },
+                failure: function() {
+                    console.log("fail");
+                }
+            });
+        });
+
+        $.widget("custom.combobox", {
+            _create: function () {
+                this.wrapper = $("<span>")
+                    .addClass("custom-combobox")
+                    .insertAfter(this.element);
+                this.element.hide();
+                this._createAutocomplete();
+                this._createShowAllButton();
+            },
+            _createAutocomplete: function () {
+                var selected = this.element.children(":selected"),
+                    value = selected.val() ? selected.text() : "";
+                this.input = $("<input>")
+                    .appendTo(this.wrapper)
+                    .val(value)
+                    .attr("title", "")
+                    .addClass("custom-combobox-input ui-widget ui-widget-content ui-state-default ui-corner-left")
+                    .autocomplete({
+                        delay: 0,
+                        minLength: 0,
+                        source: $.proxy(this, "_source")
+                    })
+                    .tooltip({
+                        classes: {
+                            "ui-tooltip": "ui-state-highlight"
+                        }
+                    });
+                this._on(this.input, {
+                    autocompleteselect: function (event, ui) {
+                        ui.item.option.selected = true;
+                        this._trigger("select", event, {
+                            item: ui.item.option
+                        });
+                    },
+                    autocompletechange: "_removeIfInvalid"
+                });
+            },
+            _createShowAllButton: function () {
+                var input = this.input,
+                    wasOpen = false;
+                $("<a>")
+                    .attr("tabIndex", -1)
+                    .attr("title", "Show All Items")
+                    .tooltip()
+                    .appendTo(this.wrapper)
+                    .button({
+                        icons: {
+                            primary: "ui-icon-triangle-1-s"
+                        },
+                        text: false
+                    })
+                    .removeClass("ui-corner-all")
+                    .addClass("custom-combobox-toggle ui-corner-right")
+                    .on("mousedown", function () {
+                        wasOpen = input.autocomplete("widget").is(":visible");
+                    })
+                    .on("click", function () {
+                        input.trigger("focus");
+                        // Close if already visible
+                        if (wasOpen) {
+                            return;
+                        }
+                        // Pass empty string as value to search for, displaying all results
+                        input.autocomplete("search", "");
+                    });
+            },
+            _source: function (request, response) {
+                var matcher = new RegExp($.ui.autocomplete.escapeRegex(request.term), "i");
+                response(this.element.children("option").map(function () {
+                    var text = $(this).text();
+                    if (this.value && (!request.term || matcher.test(text)))
+                        return {
+                            label: text,
+                            value: text,
+                            option: this
+                        };
+                }));
+            },
+            _removeIfInvalid: function (event, ui) {
+                // Selected an item, nothing to do
+                if (ui.item) {
+                    return;
+                }
+                // Search for a match (case-insensitive)
+                var value = this.input.val(),
+                    valueLowerCase = value.toLowerCase(),
+                    valid = false;
+                this.element.children("option").each(function () {
+                    if ($(this).text().toLowerCase() === valueLowerCase) {
+                        this.selected = valid = true;
+                        return false;
+                    }
+                });
+                // Found a match, nothing to do
+                if (valid) {
+                    return;
+                }
+                // Remove invalid value
+                this.input
+                    .val("")
+                    .attr("title", value + " didn't match any item")
+                    .tooltip("open");
+                this.element.val("");
+                this._delay(function () {
+                    this.input.tooltip("close").attr("title", "");
+                }, 2500);
+                this.input.autocomplete("instance").term = "";
+            },
+            _destroy: function () {
+                this.wrapper.remove();
+                this.element.show();
+            },
+        });
+
+        $("#fournitype").combobox();
+        $("#toggle").on("click", function() {
+            $("#fournitype").toggle();
         });
     });
 </script>
